[package]
name = "hemlock_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.25.0"
aws-sdk-s3 = "1.34.0"
aws-smithy-runtime-api = "1.6.0"
rand = "0.8.5"
rusty_crypto = "0.1.24"
tokio = { version = "1", features = ["full"] }